--- a/webcontrol/index.html
+++ b/webcontrol/index.html
@@ -1,56 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>AlfaDrone Web Control</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300;400;600&display=swap" rel="stylesheet">
-        <link rel='stylesheet' href='./index.css' type='text/css' media='all' />
-        <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
-        <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
-    </head>
-    <body class="app">
-        <nav class="nav">
-            <div class="nav__logo"></div>
-            <div class="nav__title">Панели</div>
-            <div class="nav__buttons">
-                <button class="button" data-tag="button_flight">Приборы</button>
-                <button class="button" data-tag="button_map">Навигация</button>
-            </div>
-            <!--<div class="buttons-separator"></div>-->
-            <div class="nav__buttons">
-                <button class="button button_selected" data-tag="button_sensors">Датчики</button>
-            </div>
-        </nav>
-
-        
-        <main class="main">
-            <header class="header">
-                <div class="header__text" data-tag="text">Просто текст</div>
-                <div class="header__buttons">
-                    <button class="button" data-tag="button_connect_ble">BLE</button>
-                    <button class="button" data-tag="button_connect_serial">Serial</button>
-                    <button class="button button_hidden" data-tag="button_disconnect">Disconnect</button>
-                </div>
-            </header>
-            
-            <section class="section">
-                <article class="article article_hidden" data-tag="view_flight"></article>
-                <article class="article article_hidden" data-tag="view_map"></article>
-                <article class="article" data-tag="view_sensors">
-                    <template data-tag="row_sensor">
-                        <div class="sensor">
-                            <div class="sensor__wrapper"></div>
-                            <div class="sensor__title"></div>
-                            <div class="sensor__value"></div>
-                            <div class="sensor__unit"></div>
-                            <div class="sensor__wrapper"></div>
-                        </div>
-                    </template>
-                </article>
-            </section>
-        </main>
-        <script type="module" src="./index.js"></script>
-    </body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title>AlfaDrone Web Control</title><meta name="viewport" content="user-scalable=no,initial-scale=1,minimum-scale=1,width=device-width,minimal-ui,shrink-to-fit=no"><link href="main.457e048e019bfc0d25ef.css" rel="stylesheet"></head><body class="app"><header class="header"><div class="header__buttons"><button class="header__button header__button_menu" data-tag="button_menu"></button></div><div class="header__text" data-tag="text">WebControl</div><div class="header__buttons"><button class="header__button header__button_ble" data-tag="button_connect_ble"></button> <button class="header__button header__button_cable" data-tag="button_connect_serial"></button> <button class="header__button header__button_disconnect header__button_hidden" data-tag="button_disconnect"></button></div></header><main class="main"><nav class="nav" data-tag="nav"><div class="nav__buttons"><button class="nav__button nav__button_back nav__button_mobile" data-tag="button_hide"></button></div><div class="nav__buttons" data-tag="panels_buttons"></div><div class="buttons-separator"></div><div class="nav__buttons"><button class="nav__button nav__button_selected" data-tag="button_sensors">Датчики</button></div></nav><section class="section" data-tag="view"></section></main><script defer="defer" src="main.c7f75e7750189cd4a0c4.js"></script></body></html>
